# shirtrip

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
eval/: benchmark.py  metrics.py
shirtrip/: __main__.py
shirtrip/api/: app.py  dependencies.py  middleware.py  routes.py  schemas.py
shirtrip/config/: settings.py
shirtrip/frontend/: index.html
shirtrip/models/: model_registry.py
shirtrip/pipeline/: errors.py  image_utils.py  orchestrator.py  stage_alpha_matte.py  stage_depth_estimate.py  stage_dewarp.py  stage_garment_parse.py  stage_illuminate.py  types.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_image_utils.py  test_metrics.py  test_model_registry.py  test_orchestrator.py  test_stage_alpha_matte.py  test_stage_depth_estimate.py  test_stage_dewarp.py  test_stage_garment_parse.py  test_stage_illuminate.py  test_types.py
